fixes x button being off center for New Direct Message recipients

--- a/app/assets/stylesheets/add_dm.css.scss
+++ b/app/assets/stylesheets/add_dm.css.scss
@@ -32,6 +32,11 @@
     background-color:#f1eee8;
     display: flex;
     margin-left: .8vw;
+
+    .dm-recipient{
+      display: flex;
+      align-items: center;
+    }
   }
 
   h2{
